--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,32 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+*.log
+*.cci
+*.rte
+*.cfg
+*.fct
+*.DO
+*.EDF
+*.sts
+*.hci
+*.LBK
+*.cbi
+*.cof
+*.DBK
+*.PWI
+*.?~
+*.???~
+*.LYT
+*.cproj
+*.bmp
+*.aps
+*.aws
+*.dmp
+*.i
+*.SDF
+*.directory
+*.atsln
+Debug/
+Exe/
+Linker/
+List/
+Obj/
+*~ 
